--- a/p5js YouTube/.vscode/settings.json
+++ b/p5js YouTube/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "liveServer.settings.port": 5502,
-    "files.saveConflictResolution": "overwriteFileOnDisk"
+    "files.saveConflictResolution": "overwriteFileOnDisk",
+    
 }
